@@ -697,7 +697,9 @@ static memcached_behavior get_memcached_behavior_flag(const char *value)
   MC_STR_TO_ENUM(BEHAVIOR, BUFFER_REQUESTS);
   MC_STR_TO_ENUM(BEHAVIOR, CACHE_LOOKUPS);
   MC_STR_TO_ENUM(BEHAVIOR, CONNECT_TIMEOUT);
+#if LIBMEMCACHED_VERSION_HEX >= 0x01000003
   MC_STR_TO_ENUM(BEHAVIOR, DEAD_TIMEOUT);
+#endif
   MC_STR_TO_ENUM(BEHAVIOR, DISTRIBUTION);
   MC_STR_TO_ENUM(BEHAVIOR, HASH);
   MC_STR_TO_ENUM(BEHAVIOR, HASH_WITH_PREFIX_KEY);
@@ -713,6 +715,9 @@ static memcached_behavior get_memcached_behavior_flag(const char *value)
   MC_STR_TO_ENUM(BEHAVIOR, POLL_TIMEOUT);
   MC_STR_TO_ENUM(BEHAVIOR, RANDOMIZE_REPLICA_READ);
   MC_STR_TO_ENUM(BEHAVIOR, RCV_TIMEOUT);
+#if LIBMEMCACHED_VERSION_HEX >= 0x00049000
+  MC_STR_TO_ENUM(BEHAVIOR, REMOVE_FAILED_SERVERS);
+#endif
   MC_STR_TO_ENUM(BEHAVIOR, RETRY_TIMEOUT);
   MC_STR_TO_ENUM(BEHAVIOR, SERVER_FAILURE_LIMIT);
   MC_STR_TO_ENUM(BEHAVIOR, SND_TIMEOUT);
@@ -724,9 +729,6 @@ static memcached_behavior get_memcached_behavior_flag(const char *value)
   MC_STR_TO_ENUM(BEHAVIOR, USER_DATA);
   MC_STR_TO_ENUM(BEHAVIOR, USE_UDP);
   MC_STR_TO_ENUM(BEHAVIOR, VERIFY_KEY);
-#if LIBMEMCACHED_VERSION_HEX >= 0x00049000
-  MC_STR_TO_ENUM(BEHAVIOR, REMOVE_FAILED_SERVERS);
-#endif
 
   elog(ERROR, "pgmemcache: unknown behavior flag: %s", value);
   return -1;
